fix table border spacing

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 }
 table {
   aspect-ratio: 1/1;
+  border-spacing: 0;
 }
 
 table td {
@@ -25,6 +26,7 @@ table td {
   align-items: center;
   justify-content: center;
   display: inline-flex;
+  margin: 2px;
 }
 .icon {
   font-size: 2rem;
